# redlite

./: .gitignore  BATTLE_TESTING.md  BENCHMARK_GUIDE.md  BENCHMARK_RESULTS.md  BLOCKING.md  CHANGELOG.md  COMMANDS.md  Cargo.toml  Dockerfile.bench  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  NEXT_SESSION.md  NEXT_SESSION.txt  PERFORMANCE.md  PROFILING_REPORT.md  PROJECT.md  README.md  ROADMAP.md  RUST_COLLECTIONS.md  RUST_DB.md  RUST_SERVER.md  RUST_TYPES.md  SCHEMA.md  SPEC.md  fly.bench.toml
.github/workflows/: benchmark.yml  monorepo-ci.yml
benches/: COMPREHENSIVE_BENCHMARK_GUIDE.md  README_COMPREHENSIVE.md  baseline.json  brunch_scaling.rs  cleanup_services.sh  comprehensive_comparison.rs  redlite_benchmarks.rs  setup_services.sh  test_concurrent.rs  test_server_connection.rs  test_step_by_step.rs
crates/redlite/: Cargo.toml
crates/redlite-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml  redlite.h
crates/redlite-ffi/src/: lib.rs
crates/redlite/benches/: eviction.rs  ft_aggregate.rs  poll_impact.rs
crates/redlite/fuzz/: Cargo.toml
crates/redlite/fuzz/fuzz_targets/: command_handler.rs  query_parser.rs  resp_parser.rs
crates/redlite/src/: backend.rs  db.rs  error.rs  lib.rs  main.rs  schema.sql  schema_fts.sql  schema_geo.sql  schema_history.sql  schema_vectors.sql  search.rs  turso_db.rs  types.rs
crates/redlite/src/resp/: reader.rs
crates/redlite/src/server/: connection.rs  mod.rs  pubsub.rs
crates/redlite/tests/: server_watch.rs
docs/: astro.config.mjs  package-lock.json  wrangler.toml
docs/src/styles/: custom.css
docs/templates/: README.md
redlite-bench/: BENCHMARKING_GUIDE.md  DASHBOARD_DISCUSSION.md  DISTRIBUTED_BENCHMARKING_IDEA.MD  IMPLEMENTATION_PLAN.md  NEXT_SESSION.txt  PHASE_6_SUMMARY.md  README.md  REVISED_IMPLEMENTATION_PLAN.md  STATUS.md  VALIDATION_STRATEGY.md
redlite-bench/implementations/rust/: .gitignore  Cargo.toml  README.md  benchmark_report.md  test-scenarios.yaml
redlite-bench/implementations/rust/scenarios/: comprehensive.yaml
redlite-bench/implementations/rust/scripts/: generate-large-dbs.sh
redlite-bench/implementations/rust/src/: benchmark_runner.rs  concurrency.rs  dispatcher.rs  error.rs  lib.rs  output.rs  report_generator.rs  scenarios.rs
redlite-bench/implementations/rust/src/benchmark/: mod.rs
redlite-bench/implementations/rust/src/client/: mod.rs  redis_adapter.rs  redlite_embedded_adapter.rs
redlite-bench/spec/: benchmark-spec.yaml  protocol.md
redlite-dst/: Cargo.toml  IMPLEMENTATION.md  NEXT_SESSION.txt  README.md  ROADMAP.md  query_tests.sh  run_tests_sqlite.sh
redlite-dst/spec/: dst-spec.yaml
redlite-dst/src/: client.rs  main.rs  properties.rs  report.rs  runner.rs  sim.rs  types.rs
redlite-dst/tests/: oracle.rs  properties.rs  regression_seeds.txt
redlite-oracle/: COVERAGE.md  Cargo.toml  README.md
redlite-oracle/tests/: oracle.rs
scripts/: check_regression.py  compare_baseline.py  run_fly_bench.sh  update_baseline.py
sdks/: .gitignore  COMMANDS.md  README.md  ROADMAP.md  TEMPLATE.md
sdks/oracle/: Makefile  README.md  package-lock.json  package.json
sdks/oracle/runners/: .gitignore  DotNetOracleRunner.cs  DotNetOracleRunner.csproj  JavaOracleRunner.java  build.zig  cpp_runner.cpp  elixir_runner.exs  go.mod  go.sum  go_runner.go  kotlin_runner.kt  lua_runner.lua  php_runner.php  python_runner.py  ruby_runner.rb  swift_runner.swift  ts_runner.js  ts_runner.ts  (+1 more)
sdks/redlite-bf/: Makefile  README.md  interpreter.c  redlite.bf
sdks/redlite-chef/: Makefile  README.md
sdks/redlite-cow/: Makefile  README.md  redlite.cow
sdks/redlite-cpp/: CMakeLists.txt  Makefile  README.md  redlite.pc.in
sdks/redlite-cpp/examples/: basic.cpp
sdks/redlite-cpp/include/redlite/: redlite.hpp
sdks/redlite-cpp/tests/: simple_test.cpp  test_hashes.cpp  test_keys.cpp  test_lists.cpp  test_sets.cpp  test_strings.cpp  test_zsets.cpp
sdks/redlite-dart/: .gitignore  Makefile  README.md  flutter_rust_bridge.yaml  pubspec.yaml
sdks/redlite-dart/rust/: Cargo.toml
sdks/redlite-dart/rust/src/: frb_generated.rs  lib.rs
sdks/redlite-dart/rust/src/api/: mod.rs
sdks/redlite-dotnet/: Makefile  README.md  Redlite.csproj
sdks/redlite-elixir/: .gitignore  Makefile  README.md  mix.exs
sdks/redlite-go/: README.md  client.go  embedded.go  embedded_test.go  fts.go  geo.go  go.mod  history.go  json.go  redlite.go  redlite.h  vector.go
sdks/redlite-java/: pom.xml
sdks/redlite-jni/: Cargo.toml
sdks/redlite-jni/src/: lib.rs
sdks/redlite-kotlin/: build.gradle.kts  settings.gradle.kts
sdks/redlite-lol/: Makefile  README.md  redlite.lol
sdks/redlite-lua/: Makefile  README.md  redlite-scm-1.rockspec  redlite.lua
sdks/redlite-php/: Makefile  README.md  composer.json  phpunit.xml
sdks/redlite-piet/: Makefile  README.md  gallery.html
sdks/redlite-python/: Cargo.toml  README.md  pyproject.toml
sdks/redlite-python/rust/: lib.rs
sdks/redlite-python/src/redlite/: __init__.py  _ffi.py  client.py
sdks/redlite-python/tests/: __init__.py  test_basic.py  test_collections.py  test_comprehensive.py  test_config.py  test_keys.py  test_strings.py
sdks/redlite-ruby/: README.md  Rakefile  redlite.gemspec
sdks/redlite-spl/: Makefile  README.md
sdks/redlite-swift/: Makefile  Package.swift  README.md
sdks/redlite-ts/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  test.js
sdks/redlite-ts/src/: lib.rs
sdks/redlite-wasm/: Cargo.toml  README.md  package.json
sdks/redlite-wasm/examples/node/: index.mjs
sdks/redlite-wasm/examples/web/: index.html
sdks/redlite-wasm/src/: db.rs  error.rs  lib.rs  schema.rs  types.rs
sdks/redlite-wasm/tests/: web.rs
sdks/redlite-ws/: Makefile  README.md
sdks/redlite-zig/: .gitignore  Makefile  README.md  build.zig
sdks/wasm/: README.md  package.json  tsconfig.json
src/: db.rs  error.rs  lib.rs  libsql_db.rs  main.rs  schema.sql  schema_ft.sql  schema_fts.sql  schema_vectors.sql  search.rs  types.rs
src/resp/: mod.rs  reader.rs  value.rs
src/server/: mod.rs  pubsub.rs
tests/: integration.rs  server_watch.rs
(+188 files in other folders)
