[package]
name = "redlite"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "SQLite-backed Redis-compatible embedded key-value store"
license = "Apache-2.0"
repository = "https://github.com/russellromney/redlite"
documentation = "https://docs.rs/redlite"
readme = "README.md"
keywords = ["redis", "sqlite", "kv", "database", "embedded"]
categories = ["database", "caching"]

[lib]
name = "redlite"
path = "src/lib.rs"

[[bin]]
name = "redlite"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rmp-serde = "1"

[dev-dependencies]
redis = "0.25"
tempfile = "3"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
