[package]
name = "redlite"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "SQLite-backed Redis-compatible embedded key-value store"
license = "Apache-2.0"
repository = "https://github.com/russellromney/redlite"
documentation = "https://docs.rs/redlite"
readme = "README.md"
keywords = ["redis", "sqlite", "kv", "database", "embedded"]
categories = ["database", "caching"]

[lib]
name = "redlite"
path = "src/lib.rs"

[[bin]]
name = "redlite"
path = "src/main.rs"

[features]
default = []
turso = ["dep:turso"]

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
turso = { version = "0.1", optional = true }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
bytes = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rmp-serde = "1"

[dev-dependencies]
redis = "0.25"
tempfile = "3"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
brunch = "0.5"

[profile.release]
lto = true
codegen-units = 1

[[bench]]
name = "redlite_benchmarks"
harness = false

[[bench]]
name = "brunch_scaling"
harness = false

[[bench]]
name = "comprehensive_comparison"
harness = false

[[bench]]
name = "test_concurrent"
harness = false

[[bench]]
name = "test_server_connection"
harness = false

[[bench]]
name = "test_step_by_step"
harness = false
