[package]
name = "redlite-dst"
version = "0.1.0"
edition = "2021"
description = "Deterministic Simulation Testing suite for Redlite"
license = "MIT"

[[bin]]
name = "redlite-dst"
path = "src/main.rs"

[dependencies]
# Redlite
redlite = { path = "../crates/redlite" }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"

# Error handling
thiserror = "1.0"

# Randomness
rand = "0.8"
rand_chacha = "0.3"

# Progress bars
indicatif = "0.17"
console = "0.15"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Temporary directories for testing
tempfile = "3"

# Redis client for oracle testing
redis = "0.27"

# System monitoring
sysinfo = "0.32"

# Synchronization primitives
parking_lot = "0.12"

# Fuzzing (using proptest in-process fuzzing)
[dev-dependencies]
proptest = "1.4"

# Note: MadSim integration would require:
# [target.'cfg(madsim)'.dependencies]
# tokio = { version = "0.2", package = "madsim-tokio" }
# madsim = "0.2"
# For now, we use deterministic simulation without MadSim runtime.
