[package]
name = "redlite-dst"
version = "0.1.0"
edition = "2021"
description = "Deterministic Simulation Testing suite for Redlite"
license = "Apache-2.0"

# Allow cfg(madsim) without warning (set via RUSTFLAGS)
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(madsim)'] }

[[bin]]
name = "redlite-dst"
path = "src/main.rs"

[features]
default = []
# Enable MadSim deterministic runtime
# Build with: RUSTFLAGS="--cfg madsim" cargo build --features madsim
madsim = ["dep:madsim"]

[dependencies]
# Redlite
redlite = { path = "../crates/redlite" }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Async runtime - conditionally use madsim-tokio when madsim cfg is set
[target.'cfg(not(madsim))'.dependencies]
tokio = { version = "1", features = ["full"] }

[target.'cfg(madsim)'.dependencies]
tokio = { version = "0.2", package = "madsim-tokio" }

[dependencies.madsim]
version = "0.2"
optional = true

# Serialization
[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[dependencies.serde_yaml]
version = "0.9"

# Error handling
[dependencies.anyhow]
version = "1.0"

[dependencies.thiserror]
version = "1.0"

# Randomness
[dependencies.rand]
version = "0.8"

[dependencies.rand_chacha]
version = "0.3"

# Progress bars
[dependencies.indicatif]
version = "0.17"

[dependencies.console]
version = "0.15"

# Time
[dependencies.chrono]
version = "0.4"
features = ["serde"]

# Temporary directories for testing
[dependencies.tempfile]
version = "3"

# Redis client for oracle testing
[dependencies.redis]
version = "0.27"

# System monitoring
[dependencies.sysinfo]
version = "0.32"

# Synchronization primitives
[dependencies.parking_lot]
version = "0.12"

# Fuzzing (using proptest in-process fuzzing)
[dev-dependencies]
proptest = "1.4"

# Patch crates that use randomness/time for determinism under madsim
[patch.crates-io]
# These patches are only needed when building with madsim
# getrandom = { git = "https://github.com/madsim-rs/getrandom.git", rev = "8daf97e" }
# quanta = { git = "https://github.com/madsim-rs/quanta.git", rev = "948bdc3" }
