[package]
name = "redlite"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "SQLite-backed Redis-compatible embedded key-value store"
license = "Apache-2.0"
repository = "https://github.com/russellromney/redlite"
documentation = "https://docs.rs/redlite"
readme = "README.md"
keywords = ["redis", "sqlite", "kv", "database", "embedded"]
categories = ["database", "caching"]

[lib]
name = "redlite"
path = "src/lib.rs"

[[bin]]
name = "redlite"
path = "src/main.rs"

[features]
default = []
turso = ["dep:turso"]
vectors = ["dep:sqlite-vec"]
geo = []  # R*Tree is built into SQLite, this just enables geo commands
full = ["vectors", "geo"]

[dependencies]
rusqlite = { version = "0.31", features = ["bundled", "load_extension"] }
sqlite-vec = { version = "0.1", optional = true }
turso = { version = "0.1", optional = true }
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
bytes = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[dev-dependencies]
redis = "0.25"
tempfile = "3"
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
brunch = "0.5"

[profile.release]
lto = true
codegen-units = 1

# Session 37: FT.AGGREGATE Performance Benchmarks
[[bench]]
name = "ft_aggregate"
harness = false

# Session 35.2: Poll Impact Benchmarks
[[bench]]
name = "poll_impact"
harness = false
