[package]
name = "redlite-jni"
version = "0.1.0"
edition = "2021"
description = "JNI bindings for Redlite embedded database"

[lib]
crate-type = ["cdylib"]
name = "redlite_jni"

[dependencies]
jni = "0.21"
redlite = { path = "../../crates/redlite" }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific deps if needed

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific deps if needed

[target.'cfg(target_os = "windows")'.dependencies]
# Windows-specific deps if needed

[profile.release]
opt-level = 3
lto = true
