[build-system]
requires = ["setuptools>=61.0", "cffi>=1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "redlite"
version = "0.1.0"
description = "Redis API + SQLite durability. Embedded Redis-compatible database."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Russell Romney", email = "russellromney@gmail.com"}
]
keywords = ["redis", "sqlite", "database", "embedded", "cache"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "cffi>=1.0.0",
]

[project.optional-dependencies]
redis = ["redis>=4.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/russellromney/redlite"
Documentation = "https://github.com/russellromney/redlite"
Repository = "https://github.com/russellromney/redlite"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
redlite = ["*.so", "*.dylib", "*.dll", "*.h"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
