[package]
name = "redlite-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
description = "Redis API with SQLite durability - WebAssembly build"
license = "Apache-2.0"
repository = "https://github.com/russellromney/redlite"
keywords = ["redis", "sqlite", "wasm", "database", "embedded"]
categories = ["database", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Storage",
] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
thiserror = "2"

# SQLite for WASM - use precompiled to avoid emscripten requirement
sqlite-wasm-rs = { version = "0.3", default-features = false, features = ["precompiled"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
opt-level = "z"
