[package]
name = "redlite-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3", features = ["derive"] }

[dependencies.redlite]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "resp_parser"
path = "fuzz_targets/resp_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "query_parser"
path = "fuzz_targets/query_parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "command_handler"
path = "fuzz_targets/command_handler.rs"
test = false
doc = false
bench = false
