[package]
name = "redlite-bench"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
redis = { version = "0.24", features = ["aio", "json", "tokio-comp"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
chrono = "0.4"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
tdigest = "0.2"
clap = { version = "4.0", features = ["derive"] }

# Redlite embedded support
redlite = { path = "../../../" }

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"

[[bin]]
name = "redlite-bench"
path = "src/bin/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
