[package]
name = "redlite_dart"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]
name = "redlite_dart"

[dependencies]
flutter_rust_bridge = "=2.11.1"
redlite = { path = "../../../crates/redlite" }
tokio = { version = "1", features = ["rt-multi-thread"] }

[features]
default = []
full = ["redlite/full"]
vectors = ["redlite/vectors"]
geo = ["redlite/geo"]
